--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
   <!-- Hero -->
 <section class="hero">
   <video class="hero-video" autoplay muted loop playsinline poster="images/hero-poster.jpg">
-    <source src="videos/08252025.hero.mp4" type="video/mp4">
+    <source src="videos/hero.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
 <div class="hero-text">
-    <h1>BECOME <strong>YOGA</strong> YOUR BEST SELF</h1>
+    <h1>BECOME YOUR BEST SELF</h1>
     <p>Your wellness goals are within reach with yoga, fitness, meditation, and self-care classes designed with you in mind.</p>
     <div class="hero-ctas">
       <a class="btn btn-primary" href="#">START FREE TRIAL</a>
