Update text in hero section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <div class="hero-text">
     <h1>BECOME YOUR BEST SELF</h1>
-    <p>Your wellness goals are within reach with yoga, fitness, meditation, and self-care classes designed with you in mind.</p>
+    <p>Yoga, fitness, and self-care tips designed with you in mind.</p>
     <div class="hero-ctas">
       <a class="btn btn-primary" href="#">START FREE TRIAL</a>
       <a class="btn btn-ghost" href="#">Send a Gift Card</a>
