Update text on main page

--- a/index.html
+++ b/index.html
@@ -7,22 +7,21 @@
   <link rel="icon" href="images/favicon.png">
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Elegant serif + clean sans (similar vibe to shaep.co) -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500;1,700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- Header -->
   <header class="site-header">
     <div class="container nav-wrap">
-      <a class="brand" href="index.html">Yoga with Lisa</a>
+      <a class="brand" href="index.html">yoga with lisa</a>     
       <nav class="main-nav" aria-label="Primary">
         <ul>
-          <li><a href="yoga.html">YOGA</a></li>
-          <li><a href="#">CHAT</a></li>
-          <li><a href="#">APP</a></li>
-          <li><a href="#">WELLNESS</a></li>
-          <li><a href="#">MINDFULNESS</a></li>
-          <li><a href="#">COACHING</a></li>
+          <li><a href="yoga.html">yoga</a></li>
+          <li><a href="#">chat</a></li>
+          <li><a href="#">app</a></li>
+          <li><a href="#">wellness</a></li>
+          <li><a href="#">mindfulness</a></li>
+          <li><a href="#">community</a></li>
         </ul>
       </nav>
     </div>
@@ -36,27 +35,26 @@
 
     <div class="hero-inner">
       <h1 class="display">
-        It’s time for you to <em>awaken</em> your practice.<br />
-        Welcome to your power.
+        Lift, tone and sculpt your <em>dream</em> body<br />
+        Welcome to the new you.
       </h1>
       <div class="hero-ctas">
-        <a class="btn btn-dark btn-pill" href="yoga.html">START YOUR FREE TRIAL NOW</a>
+        <a class="btn btn-dark btn-pill" href="yoga.html">JOIN THE LIFT COLLECTIVE</a>
       </div>
     </div>
   </section>
 
   <!-- Minimal Intro -->
   <section class="intro container">
-    <h2>Yoga, science, and mindfulness—beautifully integrated.</h2>
+    <h2>A community designed to <em>awaken</em> your inner yogi.</h2>
     <p>
-      Editorial-clean design. Focused movement. Evidence-informed guidance.
-      Begin with classes, coaching, and tools that meet you exactly where you are.
+      Yoga with Lisa is your on-demand, personalized AI-powered platform to lift your practice, power, and presence to new heights.
     </p>
   </section>
 
   <footer class="site-footer">
     <div class="container">
-      <p>© <span id="y"></span> Yoga with Lisa — All rights reserved.</p>
+      <p>© <span id="y"></span>YOGA WITH LISA BY LISA ESHUN-WILSON / ALL RIGHTS RESERVED</p>
     </div>
   </footer>
 
