Update community tagline.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <!-- Minimal Intro -->
   <section class="intro container">
-    <h2>A community designed to <em>awaken</em> your inner yogi.</h2>
+    <h2>A community designed to awaken your <em>inner yogi.<em></h2>
     <p>
       Yoga with Lisa is your on-demand, personalized AI-powered platform to lift your practice, power, and presence to new heights.
     </p>
