Updated hero aesthetics.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       <a class="brand" href="index.html">yoga with lisa</a>     
       <nav class="main-nav" aria-label="Primary">
         <ul>
-          <li><a href="yoga.html">yoga</a></li>
-          <li><a href="#">chat</a></li>
-          <li><a href="#">app</a></li>
-          <li><a href="#">wellness</a></li>
-          <li><a href="#">mindfulness</a></li>
-          <li><a href="#">community</a></li>
+          <li><a href="yoga.html">YOGA</a></li>
+          <li><a href="#">CHAT</a></li>
+          <li><a href="#">APP</a></li>
+          <li><a href="#">WELLNESS</a></li>
+          <li><a href="#">MINDFULNESS</a></li>
+          <li><a href="#">COMMUNITY</a></li>
         </ul>
       </nav>
     </div>
