Updated hero summary.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="hero-inner">
       <h1 class="display">
-        Lift, tone and sculpt your <em>dream</em> body<br />
+        Build your <em>dream</em> body today.<br />
         Welcome to the new you.
       </h1>
       <div class="hero-ctas">
