Return to original font and style aesthetics

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
     <div class="hero-inner">
       <h1 class="display">
-        Build your <em>dream</em> body today.<br />
+        Build your <em>dream body</em> today.<br />
         Welcome to the new you.
       </h1>
       <div class="hero-ctas">
-        <a class="btn btn-dark btn-pill" href="yoga.html">JOIN THE LIFT COLLECTIVE</a>
+        <a class="btn btn-dark btn-pill" href="yoga.html">START YOUR FREE TRIAL TODAY</a>
       </div>
     </div>
   </section>
@@ -48,13 +48,13 @@
   <section class="intro container">
     <h2>A community designed to awaken your <em>inner yogi.<em></h2>
     <p>
-      Yoga with Lisa is your on-demand, personalized AI-powered platform to lift your practice, power, and presence to new heights.
+      Yoga with Lisa is your on-demand, personalized AI-powered platform to lift your practice, power, and presence to new heights. Our holistic approach offers tailored yoga and meditation classes, journaling techniques, and allegy-friendly receipes to lift, lull or bring lustre to life for everyone everywhere. We are the <em>lift collective</em> a community dedicated to not only lifting up ourselves but also those around us.  
     </p>
   </section>
 
   <footer class="site-footer">
     <div class="container">
-      <p>© <span id="y"></span>YOGA WITH LISA BY LISA ESHUN-WILSON / ALL RIGHTS RESERVED</p>
+      <p>© <span id="y"></span>, YOGA WITH LISA BY LISA ESHUN-WILSON / ALL RIGHTS RESERVED</p>
     </div>
   </footer>
 
