--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Yoga with Lisa</title>
   <link rel="icon" href="images/favicon.png">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Adobe Fonts -->
+  <link rel="stylesheet" href="https://use.typekit.net/uwl6zhw.css">
+  <title>Yoga with Lisa</title>
+  <link rel="icon" href="images/favicon.png">
   <link rel="stylesheet" href="style.css" />
-
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500;1,700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -17,11 +22,8 @@
       <nav class="main-nav" aria-label="Primary">
         <ul>
           <li><a href="yoga.html">YOGA</a></li>
-          <li><a href="#">CHAT</a></li>
-          <li><a href="#">APP</a></li>
+          <li><a href="#">CORPORATE</a></li>
           <li><a href="#">WELLNESS</a></li>
-          <li><a href="#">MINDFULNESS</a></li>
-          <li><a href="#">COMMUNITY</a></li>
         </ul>
       </nav>
     </div>
@@ -35,10 +37,10 @@
 
     <div class="hero-inner">
       <h1 class="display">
-        Build your <em>dream body</em> today.<br />
-        Welcome to the new you.
+  	It's time to build your <span class="nowrap">dream</span> body.<br/>
+  	Welcome to the new you. <span class="nowrap"></span>.
       </h1>
-      <div class="hero-ctas">
+  <div class="hero-ctas">
         <a class="btn btn-dark btn-pill" href="yoga.html">START YOUR FREE TRIAL TODAY</a>
       </div>
     </div>
