Add amandine font

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
     <div class="hero-inner">
       <h1 class="display">
-  	It's time to build your <span class="nowrap">dream</span> body.<br/>
-  	Welcome to the new you. <span class="nowrap"></span>.
+  	It's time to build your <span class="nowrap"><em>dream</em></span> body.<br/>
+  	Welcome to the new you. <span class="nowrap"></span>
       </h1>
   <div class="hero-ctas">
         <a class="btn btn-dark btn-pill" href="yoga.html">START YOUR FREE TRIAL TODAY</a>
