--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
           <li><a href="yoga.html">YOGA</a></li>
           <li><a href="#">CORPORATE</a></li>
           <li><a href="#">WELLNESS</a></li>
+	  <li><a href="#>BLOG</a><li>
+          <li><a class="login-btn" href="login.html">LOGIN</a></li>
         </ul>
       </nav>
     </div>
