Updated index.html file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="yoga.html">YOGA</a></li>
           <li><a href="#">CORPORATE</a></li>
           <li><a href="#">WELLNESS</a></li>
-	  <li><a href="#>BLOG</a><li>
+	  <li><a href="#>BLOG</a></li>
           <li><a class="login-btn" href="login.html">LOGIN</a></li>
         </ul>
       </nav>
@@ -50,15 +50,15 @@
 
   <!-- Minimal Intro -->
   <section class="intro container">
-    <h2>A community designed to awaken your <em>inner yogi.<em></h2>
+    <h2>A community designed to awaken your <em>inner yogi.</em></h2>
     <p>
-      Yoga with Lisa is your on-demand, personalized AI-powered platform to lift your practice, power, and presence to new heights. Our holistic approach offers tailored yoga and meditation classes, journaling techniques, and allegy-friendly receipes to lift, lull or bring lustre to life for everyone everywhere. We are the <em>lift collective</em> a community dedicated to not only lifting up ourselves but also those around us.  
+      Yoga with Lisa is your on-demand, personalized AI-powered platform to lift your practice, power, and presence to new heights. Our holistic approach offers tailored yoga and meditation classes, journaling techniques, and allergy-friendly receipes to lift, lull or bring lustre to life for everyone everywhere.  
     </p>
   </section>
 
   <footer class="site-footer">
     <div class="container">
-      <p>© <span id="y"></span>, YOGA WITH LISA BY LISA ESHUN-WILSON / ALL RIGHTS RESERVED</p>
+      <p>© <span id="y"></span>, YOGA WITH LISA BY LISA ESHUN-WILSON & ASSOCIATES,LLC / ALL RIGHTS RESERVED</p>
     </div>
   </footer>
 
