--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="hero-inner">
       <h1 class="display">
-  	It's time to build your <em>dream</em> body.<br/>
+  	<span class="nowrap">It’s time to build your <em>dream</em> body today.</span><br/>
   	Welcome to the new you. 
       </h1>
   <div class="hero-ctas">
@@ -52,7 +52,7 @@
   <section class="intro container">
     <h2>A community designed to awaken your <em>inner yogi.</em></h2>
     <p>
-      Yoga with Lisa is your on-demand, personalized AI-powered platform to lift your practice, power, and presence to new heights. Our holistic approach offers tailored yoga and meditation classes, journaling techniques, and allergy-friendly receipes to lift, lull or bring lustre to life for everyone everywhere.  
+    Yoga with Lisa is your personalized, AI-powered platform designed to elevate your practice, strength, and presence. With tailored yoga and meditation, mindful journaling, and allergy-friendly recipes, we help you reach new heights—anytime, anywhere.  
     </p>
   </section>
 
