--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="hero-inner">
       <h1 class="display">
-  	<span class="nowrap">It’s time to build your <em>dream</em> body today.</span><br/>
+  	<span class="nowrap">It’s time to build your <em>dream</em> body.</span><br/>
   	Welcome to the new you. 
       </h1>
   <div class="hero-ctas">
