Add black login button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="#">CORPORATE</a></li>
           <li><a href="#">WELLNESS</a></li>
 	  <li><a href="#>BLOG</a></li>
-          <li><a class="login-btn" href="login.html">LOGIN</a></li>
+          <li><a class="btn btn-dark btn-pill" href="yoga.html">LOGIN</a></li>
         </ul>
       </nav>
     </div>
@@ -52,7 +52,7 @@
   <section class="intro container">
     <h2>A community designed to awaken your <em>inner yogi.</em></h2>
     <p>
-    Yoga with Lisa is your personalized, AI-powered platform designed to elevate your practice, strength, and presence. With tailored yoga and meditation, mindful journaling, and allergy-friendly recipes, we help you reach new heights—anytime, anywhere.  
+    Yoga with Lisa is your AI-powered personalized wellness companion — personalized yoga, cycle syncing, meditations, and nutrition in one place — adapting to your body, your cycle, and your lifestyle in real time.  
     </p>
   </section>
 
