--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="#">CORPORATE</a></li>
           <li><a href="#">WELLNESS</a></li>
 	  <li><a href="#>BLOG</a></li>
-          <li><a class="login-btn" href="yoga.html">LOGIN</a></li>
+          <li><a class="btn btn-dark btn-pill login-btn" href="yoga.html">LOGIN</a></li>
         </ul>
       </nav>
     </div>
