--- a/index.html
+++ b/index.html
@@ -1,67 +1,69 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Login Button Test</title>
-<style>
-:root { --black:#000; --white:#fff; }
-
-body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
-
-/* Header / Nav */
-.site-header{ position:fixed; inset:0 0 auto 0; padding:22px 24px; z-index:10; background:transparent; }
-.nav-wrap{ display:flex; align-items:center; justify-content:space-between; }
-.brand{ color:#fff; text-decoration:none; font-weight:700; font-size:1.4rem; }
-.main-nav ul{ display:flex; gap:28px; list-style:none; margin:0; padding:0; }
-.main-nav a{ color:#fff; text-decoration:none; font-weight:700; }
-
-/* Buttons */
-.btn{ display:inline-block; text-decoration:none; font-weight:700; padding:16px 28px; border-radius:6px; transition:.25s ease; }
-.btn-pill{ border-radius:9999px; padding:12px 24px; }
-.btn-dark{ background:var(--black); color:var(--white); border:1px solid var(--black); }
-.btn-dark:hover{ background:#fff; color:#000; }
-
-/* Make the LOGIN in the nav look like CTA (wins over nav link styles) */
-.main-nav .login-btn{
-  background:#000 !important;
-  color:#fff !important;
-  border:1px solid #000 !important;
-  border-radius:9999px !important;
-  padding:10px 22px !important;
-  display:inline-block !important;
-}
-
-/* Demo hero */
-.hero{
-  min-height:60vh;
-  display:grid; place-items:center; text-align:center; color:#fff;
-  background-image:
-    linear-gradient(180deg, rgba(0,0,0,.45), rgba(0,0,0,.45)),
-    url('https://images.unsplash.com/photo-1518310383802-640c2de311b2?q=80&w=1400&auto=format&fit=crop');
-  background-size:cover; background-position:center;
-}
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Yoga with Lisa</title>
+  <link rel="icon" href="images/favicon.png">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Adobe Fonts -->
+  <link rel="stylesheet" href="https://use.typekit.net/uwl6zhw.css">
+  <title>Yoga with Lisa</title>
+  <link rel="icon" href="images/favicon.png">
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500;1,700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Header -->
+  <header class="site-header">
+    <div class="container nav-wrap">
+      <a class="brand" href="index.html">yoga with lisa</a>     
+      <nav class="main-nav" aria-label="Primary">
+        <ul>
+          <li><a href="yoga.html">YOGA</a></li>
+          <li><a href="#">CORPORATE</a></li>
+          <li><a href="#">WELLNESS</a></li>
+	  <li><a href="#>BLOG</a></li>
+          <li><a class="btn btn-dark btn-pill login-btn" href="yoga.html">LOGIN</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-<header class="site-header">
-  <div class="nav-wrap">
-    <a class="brand" href="#">yoga with lisa</a>
-    <nav class="main-nav">
-      <ul>
-        <li><a href="#">YOGA</a></li>
-        <li><a href="#">CORPORATE</a></li>
-        <li><a href="#">WELLNESS</a></li>
-        <li><a class="btn btn-dark btn-pill login-btn" href="#">LOGIN</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
+  <!-- Hero (image) -->
+  <section class="hero hero--image" role="banner" aria-label="Hero">
+    <!-- Set your image at images/hero.jpg -->
+    <div class="hero-media" style="background-image:url('images/hero.jpg');" aria-hidden="true"></div>
+    <div class="hero-overlay" aria-hidden="true"></div>
 
-<section class="hero">
-  <a class="btn btn-dark btn-pill" href="#">START YOUR FREE TRIAL TODAY</a>
-</section>
+    <div class="hero-inner">
+      <h1 class="display">
+  	<span class="nowrap">It’s time to build your <em>dream</em> body.</span><br/>
+  	Welcome to the new you. 
+      </h1>
+  <div class="hero-ctas">
+        <a class="btn btn-dark btn-pill" href="yoga.html">START YOUR FREE TRIAL TODAY</a>
+      </div>
+    </div>
+  </section>
 
+  <!-- Minimal Intro -->
+  <section class="intro container">
+    <h2>A community designed to awaken your <em>inner yogi.</em></h2>
+    <p>
+    Yoga with Lisa is your AI-powered personalized wellness companion — personalized yoga, cycle syncing, meditations, and nutrition in one place — adapting to your body, your cycle, and your lifestyle in real time.  
+    </p>
+  </section>
+
+  <footer class="site-footer">
+    <div class="container">
+      <p>© <span id="y"></span>, YOGA WITH LISA BY LISA ESHUN-WILSON & ASSOCIATES,LLC / ALL RIGHTS RESERVED</p>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
