Login button change

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
           <li><a href="yoga.html">YOGA</a></li>
           <li><a href="#">CORPORATE</a></li>
           <li><a href="#">WELLNESS</a></li>
-	  <li><a href="#>BLOG</a></li>
-          <li><a class="btn btn-dark btn-pill login-btn" href="yoga.html">LOGIN</a></li>
+          <li><a href="yoga.html" class="login-btn">LOGIN</a></li>
         </ul>
       </nav>
     </div>
