Fix scroll bar issue

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <p>© <span id="y"></span>, YOGA WITH LISA BY LISA ESHUN-WILSON & ASSOCIATES,LLC / ALL RIGHTS RESERVED</p>
+      <p>© <span id="y"></span> YOGA WITH LISA BY LISA ESHUN-WILSON & ASSOCIATES,LLC / ALL RIGHTS RESERVED</p>
     </div>
   </footer>
 
