Header scoll bar

--- a/index.html
+++ b/index.html
@@ -56,12 +56,6 @@
     </p>
   </section>
 
-  <footer class="site-footer">
-    <div class="container">
-      <p>© <span id="y"></span> YOGA WITH LISA BY LISA ESHUN-WILSON & ASSOCIATES,LLC / ALL RIGHTS RESERVED</p>
-    </div>
-  </footer>
-
 <!-- Sticky taupe nav on scroll -->
   <script>
     (function () {
@@ -70,8 +64,7 @@
 
       const toggle = () => {
         if (window.scrollY > 50) {
-          header.classList.add('scrolled');
-        } else {
+          header.classList.add('scrolled');        } else {
           header.classList.remove('scrolled');
     	}
       };
@@ -80,6 +73,12 @@
     window.addEventListener('scroll', toggle, { passive: true });
   })();
 </script>
+
+  <footer class="site-footer">
+    <div class="container">
+      <p>© <span id="y"></span> YOGA WITH LISA BY LISA ESHUN-WILSON & ASSOCIATES,LLC / ALL RIGHTS RESERVED</p>
+    </div>
+  </footer>
 
 </body>
 </html>
