--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <nav class="main-nav" aria-label="Primary">
         <ul>
           <li><a href="yoga.html">YOGA</a></li>
-          <li><a href="#">CORPORATE</a></li>
-          <li><a href="#">WELLNESS</a></li>
+          <li><a href="corporate.html">CORPORATE</a></li>
+          <li><a href="wellness.html">WELLNESS</a></li>
           <li><a href="yoga.html" class="login-btn">LOGIN</a></li>
         </ul>
       </nav>
