Index file update

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
       <a class="brand" href="index.html">yoga with lisa</a>     
       <nav class="main-nav" aria-label="Primary">
         <ul>
-          <li><a href="yoga.html">YOGA</a></li>
-          <li><a href="corporate.html">CORPORATE</a></li>
-          <li><a href="wellness.html">WELLNESS</a></li>
-          <li><a href="yoga.html" class="login-btn">LOGIN</a></li>
+          <li><a href="login.html" class="login-btn">LOGIN</a></li>
         </ul>
       </nav>
     </div>
@@ -76,7 +73,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <p>© <span id="y"></span> YOGA WITH LISA BY LISA ESHUN-WILSON & ASSOCIATES,LLC / ALL RIGHTS RESERVED</p>
+      <p>© <span id="y"></span> YOGA WITH LISA BY LISA ESHUN-WILSON & ASSOCIATES,LLC. / ALL RIGHTS RESERVED</p>
     </div>
   </footer>
 
