Switched code to header.classList.toggle('scrolled')

--- a/index.html
+++ b/index.html
@@ -54,19 +54,16 @@
   </section>
 
 <!-- Sticky taupe nav on scroll -->
-  <script>
-    (function () {
-      const header = document.querySelector('.site-header');
-      if (!header) return;
+<script>
+  (function () {
+    const header = document.querySelector('.site-header');
+    if (!header) return;
 
-      const toggle = () => {
-        if (window.scrollY > 50) {
-          header.classList.add('scrolled');        } else {
-          header.classList.remove('scrolled');
-    	}
-      };
+    const toggle = () => {
+      header.classList.toggle('scrolled', window.scrollY > 50);
+    };
 
-    toggle(); // initial state
+    toggle();                          // set initial state on load
     window.addEventListener('scroll', toggle, { passive: true });
   })();
 </script>
