Hero text thickness

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
   <!-- Minimal Intro -->
   <section class="intro container">
-    <h2>A community designed to awaken your <em>inner yogi.</em></h2>
+    <h2>Awaken your <em>inner yogi.</em></h2>
     <p>
-    Yoga with Lisa is your AI-powered personalized wellness companion — personalized yoga, cycle syncing, meditations, and nutrition in one place — adapting to your body, your cycle, and your lifestyle in real time.  
+    Yoga with Lisa is your AI-powered personalized wellness companion — personalized yoga classes, meditations, and nutrition in one place — adapting to your body, your cycle, and your lifestyle in real time.  
     </p>
   </section>
 
