Hero text change

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
     <div class="hero-inner">
       <h1 class="display">
-  	<span class="nowrap">Build your <em>dream</em> body today.</span><br/>
-  	Welcome to the new you. 
+  	<span class="nowrap">Your <em>dream</em> body awaits.</span><br/>
+  	Step into your power. 
       </h1>
   <div class="hero-ctas">
         <a class="btn btn-dark btn-pill" href="yoga.html">START YOUR FREE TRIAL TODAY</a>
