Page links and mission image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="hero-inner">
       <h1 class="display">
   	<span class="nowrap">Your <em>dream</em> body awaits.</span><br/>
-  	Step into your power. 
+  	Awaken your <em>inner</em> yogi.  
       </h1>
   <div class="hero-ctas">
         <a class="btn btn-dark btn-pill" href="yoga.html">START YOUR FREE TRIAL TODAY</a>
@@ -47,9 +47,9 @@
 
   <!-- Minimal Intro -->
   <section class="intro container">
-    <h2>Awaken your <em>inner yogi.</em></h2>
+    <h2>The yoga teacher in your pocket</h2>
     <p>
-    Yoga with Lisa is your AI-powered personalized wellness companion — personalized yoga classes, meditations, and nutrition in one place — adapting to your body, your cycle, and your lifestyle in real time.  
+    Yoga with Lisa is an AI-powered wellness companion — featuring personalized yoga classes, meditations, and nutrition all in one place — adapting to your body, your cycle, and your lifestyle in real time.  
     </p>
   </section>
 
@@ -84,6 +84,68 @@
     apply(getY());
   })();
 </script>
+
+<!-- =================== Feature Carousel =================== -->
+<section class="cards container" aria-label="Featured links">
+  <h2 class="visually-hidden">Explore</h2>
+
+  <div class="cards-row" tabindex="0">
+    <!-- Card 1 -->
+    <article class="card">
+      <a class="card-link" href="yoga.html">
+        <!-- default image -->
+        <img class="card-img img-default" src="images/card-cta-default.jpg" alt="Calls to Action" loading="lazy">
+        <!-- hover/alt image -->
+        <img class="card-img img-hover"   src="images/card-cta-hover.jpg"   alt="" aria-hidden="true">
+        <div class="card-tag">new</div>
+        <div class="card-cta">
+          <span>Calls to Action</span>
+        </div>
+      </a>
+    </article>
+
+    <!-- Card 2 -->
+    <article class="card">
+      <a class="card-link" href="#wellness">
+        <img class="card-img img-default" src="images/card-wellness-default.jpg" alt="Wellness">
+        <img class="card-img img-hover"   src="images/card-wellness-hover.jpg"   alt="" aria-hidden="true">
+        <div class="card-cta"><span>Wellness</span></div>
+      </a>
+    </article>
+
+    <!-- Card 3 -->
+    <article class="card">
+      <a class="card-link" href="#corporate">
+        <img class="card-img img-default" src="images/card-corporate-default.jpg" alt="Corporate">
+        <img class="card-img img-hover"   src="images/card-corporate-hover.jpg"   alt="" aria-hidden="true">
+        <div class="card-cta"><span>Corporate</span></div>
+      </a>
+    </article>
+
+    <!-- Card 4 -->
+    <article class="card">
+      <a class="card-link" href="#blog">
+        <img class="card-img img-default" src="images/card-blog-default.jpg" alt="Blog">
+        <img class="card-img img-hover"   src="images/card-blog-hover.jpg"   alt="" aria-hidden="true">
+        <div class="card-cta"><span>Blog</span></div>
+      </a>
+    </article>
+  </div>
+</section>
+
+<!-- =================== Mission Banner =================== -->
+<section class="mission" aria-label="Our mission">
+  <div class="mission-media" style="background-image:url('images/mission.jpg')"></div>
+  <div class="mission-overlay"></div>
+  <div class="mission-inner container">
+    <h2>one practice, really good</h2>
+    <p>
+      At Yoga with Lisa, our philosophy is to hand-craft a daily practice
+      that meets you where you are—movement, mindset, and nourishment in one place.
+    </p>
+    <a class="btn btn-pill btn-outline" href="yoga.html">EXPLORE PRACTICES</a>
+  </div>
+</section>
 
   <footer class="site-footer">
     <div class="container">
