Update Call to Action tag to Classes tag

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <img class="card-img img-hover"   src="images/card-cta-hover.jpg"   alt="" aria-hidden="true">
         <div class="card-tag">new</div>
         <div class="card-cta">
-          <span>Calls to Action</span>
+          <span>Yoga Classes</span>
         </div>
       </a>
     </article>
