Add membership pricing details

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <!-- Minimal Intro -->
   <section class="intro container">
-    <h2>The yoga teacher in your pocket</h2>
+    <h2>Let's flow.</h2>
     <p>
     Yoga with Lisa is an AI-powered wellness companion — featuring personalized yoga classes, meditations, and nutrition all in one place — adapting to your body, your cycle, and your lifestyle in real time.  
     </p>
@@ -133,17 +133,41 @@
   </div>
 </section>
 
-<!-- =================== Mission Banner =================== -->
-<section class="mission" aria-label="Our mission">
-  <div class="mission-media" style="background-image:url('images/mission.jpg')"></div>
-  <div class="mission-overlay"></div>
-  <div class="mission-inner container">
-    <h2>one practice, really good</h2>
+<!-- =================== Membership Banner =================== -->
+<section class="membership" aria-label="Membership">
+  <div class="membership-media" style="background-image:url('images/membership.jpg')"></div>
+  <div class="membership-overlay"></div>
+  <div class="membership-inner container">
+    <h2>membership perks</h2>
     <p>
-      At Yoga with Lisa, our philosophy is to hand-craft a daily practice
-      that meets you where you are—movement, mindset, and nourishment in one place.
+      + Full access to workout library, featuring yoga sculpt, vinyasa, ashtanga, yin & more!    
     </p>
-    <a class="btn btn-pill btn-outline" href="yoga.html">EXPLORE PRACTICES</a>
+    <p>
+      + New videos published every Monday. 
+    </p>
+    <p>
+      + Full access to meditation & mindfulness series. 
+    </p>
+    <p>
+      + Full access to heart-healthy and gluten free reciepes & meal plans. 
+    </p>
+    <p>
+      Monthly pricing: $16.99 USD | Yearly pricing $169.99 <em>(2 Months Free!)</em>  
+    </p>
+    <a class="btn btn-pill btn-outline" href="yoga.html">SUBSCRIBE NOW</a>
+  </div>
+</section>
+
+<!-- =================== Founder Banner =================== -->
+<section class="founder message" aria-label="Our founder">
+  <div class="founder-media" style="background-image:url('images/founder.jpg')"></div>
+  <div class="founder-overlay"></div>
+  <div class="founder-inner container">
+    <h2>meet the founder</h2>
+    <p>
+      Dr. Lisa Eshun-Wilson is a certified yoga instructor with a PhD in Molecular and Cell Biology from UC Berkeley. Her passion for longevity and AI research inspired her journey to not only practice yoga but also to teach and build community around this transformative practice. Her mission? Build tools and systems to motivate you to practice consistently and watch your body and mind transform for the better.
+    </p>
+    <a class="btn btn-pill btn-outline" href="yoga.html">FIND YOUR FLOW</a>
   </div>
 </section>
 
