Add membership and founder details

--- a/index.html
+++ b/index.html
@@ -152,9 +152,12 @@
       + Full access to heart-healthy and gluten free reciepes & meal plans. 
     </p>
     <p>
-      Monthly pricing: $16.99 USD | Yearly pricing $169.99 <em>(2 Months Free!)</em>  
+      + Read more about our <strong>Corporate Wellness Program</strong> here! 
     </p>
-    <a class="btn btn-pill btn-outline" href="yoga.html">SUBSCRIBE NOW</a>
+    <p>
+      <strong>Monthly pricing: $16.99 USD | Yearly pricing $169.99</strong><em>(2 Months Free!)</em>  
+    </p>
+    <a class="btn btn-pill btn-outline" href="membership.html">SUBSCRIBE NOW</a>
   </div>
 </section>
 
