Add photo blocks for page sections

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       + Full access to meditation & mindfulness series. 
     </p>
     <p>
-      + Full access to heart-healthy and gluten free reciepes & meal plans. 
+      + Full access to heart-healthy and gluten free recipes & meal plans. 
     </p>
     <p>
       + Read more about our <strong>Corporate Wellness Program</strong> here! 
