--- a/index.html
+++ b/index.html
@@ -161,6 +161,41 @@
   </div>
 </section>
 
+<!-- =================== Instagram Carousel =================== -->
+<section class="ig card" aria-label="Instagram">
+  <div class="ig-head">
+    <h3>you + lisa</h3>
+    <a class="btn btn-pill btn-outline" href="https://instagram.com/lisaeshunwilson" target="_blank" rel="noopener">
+      FIND US ON SOCIAL
+    </a>
+  </div>
+
+  <div class="ig-wrap">
+    <button class="ig-nav ig-prev" aria-label="Previous">‹</button>
+
+    <div class="ig-track" id="igTrack">
+      <!-- Replace these image paths with your own (local images or CDN) -->
+      <a class="ig-card" href="#" aria-label="Instagram post 1">
+        <img src="images/ig/ig1.jpg" alt="Yoga with Lisa — post 1" />
+      </a>
+      <a class="ig-card" href="#" aria-label="Instagram post 2">
+        <img src="images/ig/ig2.jpg" alt="Yoga with Lisa — post 2" />
+      </a>
+      <a class="ig-card" href="#" aria-label="Instagram post 3">
+        <img src="images/ig/ig3.jpg" alt="Yoga with Lisa — post 3" />
+      </a>
+      <a class="ig-card" href="#" aria-label="Instagram post 4">
+        <img src="images/ig/ig4.jpg" alt="Yoga with Lisa — post 4" />
+      </a>
+      <a class="ig-card" href="#" aria-label="Instagram post 5">
+        <img src="images/ig/ig5.jpg" alt="Yoga with Lisa — post 5" />
+      </a>
+    </div>
+
+    <button class="ig-nav ig-next" aria-label="Next">›</button>
+  </div>
+</section>
+
 <!-- =================== Founder Banner =================== -->
 <section class="founder message" aria-label="Our founder">
   <div class="founder-media" style="background-image:url('images/founder.jpg')"></div>
@@ -179,6 +214,14 @@
       <p>© <span id="y"></span> YOGA WITH LISA BY LISA ESHUN-WILSON & ASSOCIATES,LLC. / ALL RIGHTS RESERVED</p>
     </div>
   </footer>
+
+<div class="container" style="padding: 0 16px;">
+  <!-- membership section here -->
+</div>
+
+<div class="container" style="padding: 0 16px;">
+  <!-- founder section here -->
+</div>
 
 </body>
 </html>
