New intro message

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <section class="intro container">
     <h2>Let's flow.</h2>
     <p>
-    Yoga with Lisa is an AI-powered wellness companion — featuring personalized yoga classes, meditations, and nutrition all in one place — adapting to your body, your cycle, and your lifestyle in real time.  
+    Hi I'm Lisa! A certified yoga teacher from Los Angeles. Yoga with Lisa is an AI-powered wellness platform that features personalized yoga classes, meditations, and nutrition all in one place — adapting to your body, your cycle, and your lifestyle in real time.  
     </p>
   </section>
 
@@ -203,7 +203,7 @@
   <div class="founder-inner container">
     <h2>meet the founder</h2>
     <p>
-      Dr. Lisa Eshun-Wilson is a certified yoga instructor with a PhD in Molecular and Cell Biology from UC Berkeley. Her passion for longevity and AI research inspired her journey to not only practice yoga but also to teach and build community around this transformative practice. Her mission? Build tools and systems to motivate you to practice consistently and watch your body and mind transform for the better.
+      Dr. Lisa Eshun-Wilson receieved her PhD in Molecular and Cell Biology from UC Berkeley. Her passion for longevity and AI research inspired her journey to not only practice yoga in her free time but, ultimately, to teach and build community around this transformative practice. Her mission? Build tools and systems that motivate you to practice consistently and watch your body and mind transform for the better.
     </p>
     <a class="btn btn-pill btn-outline" href="yoga.html">FIND YOUR FLOW</a>
   </div>
