Social Button aesthetic change

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <p>
       Dr. Lisa Eshun-Wilson receieved her PhD in Molecular and Cell Biology from UC Berkeley. Her passion for longevity and AI research inspired her journey to not only practice yoga in her free time but, ultimately, to teach and build community around this transformative practice. Her mission? Build tools and systems that motivate you to practice consistently and watch your body and mind transform for the better.
     </p>
-    <a class="btn btn-pill btn-outline" href="yoga.html">FIND YOUR FLOW</a>
+    <a class="btn btn-pill btn-outline" href="https://www.lisaeshunwilson.com/">LISA THE SCIENTIST</a>
   </div>
 </section>
 
